# latticezk

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  latticezk.sln  latticezk.vcxproj  latticezk.vcxproj.filters
cmake/: latticezk_defaults.cmake
include/latticezk/: common.hpp  log.hpp  matmult.hpp  matrix.hpp  matrixext.hpp  matrixops.hpp  protocol.hpp  prover.hpp
include/latticezk/cuda/: cuavx.cuh
include/latticezk/cudamv/: common.hpp  cudamatrix.hpp  mv.hpp  mv.inl
include/latticezk/gaussian/: facct.hpp  facct.inl  gaussian_s215_n10.inl  gaussian_s2_n5.inl  gsampler.hpp  hgsampler.inl
include/latticezk/uniform/: usampler.hpp
include/latticezk/util/: aes_rnd.hpp  cpucycles.hpp
src/: CMakeLists.txt  facct.cpp  facct.cu  gsampler.cpp  prover.cpp  usampler.cpp  wincumain.cpp
src/cudamv/: cuprover.cu
test/: CMakeLists.txt  catch_main.cpp  latticezk_catch.cpp  matrix_catch.cpp  testcommon.h
